overflow text fixed

--- a/Frontend/src/styles/Note.module.css
+++ b/Frontend/src/styles/Note.module.css
@@ -28,10 +28,20 @@
     margin: 12px;
     border-radius: 8px;
     font-family: Georgia, serif;
-    font-size:medium;
+    font-size: medium;
     white-space: pre-line;
     height: 150px;
     color: #ffff;
     overflow: hidden;
-    mask-image: linear-gradient(180deg, #000 70%, transparent);
+    position: relative;
+}
+.cardText::after {
+    content: '';
+    position: absolute;
+    bottom: 0; /* place this part at the bottom*/
+    left: 0; /* align with the left side*/
+    width: 100%;
+    height: 40px;
+    background: linear-gradient(transparent, #232a32);
+    pointer-events: none;
 }
